<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <TableLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:stretchColumns="*">
        <TableRow
            android:id="@+id/TableRow_nav"
            android:layout_width="match_parent"
            android:layout_height="match_parent">
            <Button
                android:id="@+id/nav_home"
                android:text="@string/nav_home_name"
                android:textSize="12sp"
                android:textColor="@color/color_white"
                android:drawableTop="@drawable/home"
                android:background="@color/color_red"
                android:padding="5dp">
            </Button>
            <Button
                android:id="@+id/nav_cart"
                android:text="@string/nav_cat_name"
                android:textSize="12sp"
                android:textColor="@color/color_white"
                android:drawableTop="@drawable/cart"
                android:background="@color/color_red"
                android:padding="5dp">
            </Button>
            <Button
                android:id="@+id/nav_account"
                android:text="@string/nav_account_name"
                android:textSize="12sp"
                android:textColor="@color/color_white"
                android:drawableTop="@drawable/account"
                android:background="@color/color_red"
                android:padding="5dp">
            </Button>
        </TableRow>
    </TableLayout>

</LinearLayout>