<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="0dp"
    android:layout_height="60dp"
    tools:context="com.example.ison.myapplication.MainActivity"
    android:background="@color/color_red"
    android:layout_marginRight="0dp"
    app:layout_constraintRight_toRightOf="parent"
    android:layout_marginLeft="0dp"
    app:layout_constraintLeft_toLeftOf="parent"
    app:layout_constraintBottom_toBottomOf="parent">


        <TableLayout
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:stretchColumns="*"
            android:layout_alignParentTop="true"
            android:layout_marginLeft="1dp"
            app:layout_constraintLeft_toLeftOf="parent"
            android:layout_marginRight="1dp"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            android:layout_marginTop="1dp"
            app:layout_constraintBottom_toBottomOf="parent"
            android:layout_marginBottom="1dp">
                <TableRow
                    android:id="@+id/TableRow_nav"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent">

                        <Button
                            android:id="@+id/nav_home"
                            android:text="@string/nav_home_name"
                            android:textSize="12sp"
                            android:textColor="@color/color_white"
                            android:drawableTop="@drawable/home"
                            android:background="@color/color_red"
                            android:padding="5dp">
                        </Button>

                        <Button
                            android:id="@+id/nav_cart"
                            android:text="@string/nav_cat_name"
                            android:textSize="12sp"
                            android:textColor="@color/color_white"
                            android:drawableTop="@drawable/cart"
                            android:background="@color/color_red"
                            android:padding="5dp">
                        </Button>

                        <Button
                            android:id="@+id/nav_account"
                            android:text="@string/nav_account_name"
                            android:textSize="12sp"
                            android:textColor="@color/color_white"
                            android:drawableTop="@drawable/account"
                            android:background="@color/color_red"
                            android:padding="5dp">
                        </Button>

                </TableRow>
        </TableLayout>

</android.support.constraint.ConstraintLayout>
